<resources>
    <string name="app_name">Hostel Management Pro</string>
    <string name="welcome">Welcome</string>
    <string name="logIn">LOGIN</string>

    <!--    Admin functionalities-->
    <string name="student_register">Register Student</string>
    <string name="student_profile">Student Profile</string>
    <string name="student_notice">Notice</string>
    <string name="student_payments">Payments</string>

    <!--    Activity Names-->
    <string name="student_management">Student Management</string>
    <string name="student_registration">Student Registration</string>
    <string name="organization_registration">Organization Registration</string>
    <string name="admin_registration">Administrator Registration</string>
    <string name="student_profiles">Student Profiles</string>

    <!--    Menu options-->
    <string name="menu_Home">Home Page</string>
    <string name="menu_myProfile">My Profile</string>
    <string name="menu_logout">Logout</string>

    <!--    Text Views-->
    <string name="student_registration_title">Create a student Account</string>
    <string name="username">Enter Username</string>
    <string name="studentName">Enter Student Name</string>
    <string name="student_tmp_password">Enter Password</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="student_em_phone">Enter Emergency contact number</string>
    <string name="student_phone">Enter Student contact number</string>
    <string name="student_email">Enter email</string>
    <string name="student_address">Enter Permanent address</string>
    <string name="btn_CreateAccount">Create Account</string>
    <string name="note_roomAssign">Note : This will assign student to room automatically</string>

    <!--    Organization -->
    <string name="organization_registration_title">Create a Organization Account</string>
    <string name="OrganizationName">Enter Organization Name</string>
    <string name="Organization_email">Enter Organization Email</string>
    <string name="Organization_phone">Enter Organization contact number</string>
    <string name="Organization_address">Enter Organization Address</string>
    <string name="Organization_details">Organization Details</string>
    <string name="Organization_name">Organization Name : </string>
    <string name="Organization_usname">Organization Username : </string>
    <string name="Organization_pass">Organization Password : </string>
    <string name="Organization_notice">Important : Must you these credentials when creating admin account</string>

    <!--    Administrator-->
    <string name="create_admin_acc">Create administrator account</string>
    <string name="reg_as_admin">Register as administrator</string>
    <string name="orgUsername">Enter Organization Username</string>
    <string name="orgPassword">Enter Organization Password</string>
    <string name="adminName">Enter Administrator Name</string>
    <string name="admin_contactNo">Enter contact number</string>
    <string name="admin_NIC">Enter NIC number</string>
    <string name="admin_email">Enter email</string>
    <string name="admin_address">Enter address</string>
    <string name="admin_wel_msg">Welcome to</string>
    <string name="manage_accommodation">Manage Accommodation</string>
    <string name="manage_students">Manage Students</string>
    <string name="manage_organization">Manage Organization</string>
    <string name="home">HOME</string>
    <string name="chk_avlblty">Check Room Availability</string>
    <string name="attendance_qr_codes">Attendance QR Codes</string>

    <!--    login page-->
    <string name="dont_have_an_account">Don\'t have an Account?</string>
    <string name="reg_as_organization">Register as Organization</string>


    <string name="assign_to_room_msg">Do you want to assign this student to a room?</string>
    <string name="successful_msg">Student Registration Successful</string>
    <string name="select_building_name">Select Building Name</string>

    <string name="student_address_stu">Address</string>
    <string name="student_personal_info">Personal Info</string>
    <string name="student_residence_info">Residence Info</string>
    <string name="student_contact">Contact</string>
    <string name="student_emergency_contact">Emergency Contact</string>
    <string name="student_email_stu">Email</string>
    <string name="student_password">Password</string>
    <string name="student_current_password">Current Password</string>
    <string name="student_new_password">New Password</string>
    <string name="student_confirm_password">Confirm New Password</string>
    <string name="button_update_profile">Update profile</string>
    <string name="organization_id">Organization ID</string>
    <string name="student_building">Building No: </string>
    <string name="student_floor">Floor No: </string>
    <string name="student_room">Room No: </string>
    <string name="student_bed">Bed No: </string>
    <string name="student_my_profile">My Profile</string>
    <string name="student_logout">Logout</string>
    <string name="select_date">Click Icon To Select Date</string>
    <string name="attendance_time">Time : </string>
    <string name="attendance_type">Type : </string>
    <string name="student_residence">My Residence</string>
    <string name="qr_scanner">QR Code Scanner</string>
    <string name="student_attendance">My Attendance</string>

    <string name="room_details">Room Details</string>
    <string name="button">Button</string>
    <string name="name">Name</string>
    <string name="button1">Button</string>
    <string name="name1">Name</string>
    <string name="dk_nalinga">Dk Nalinga</string>

    <string name="building_no">Building No -</string>
    <string name="building_name">Building Name -</string>
    <string name="gender">Type -</string>
    <string name="male">Male</string>
    <string name="add_building">Add Building</string>
    <string name="remove_building">Remove Building</string>
    <string name="enter_building_no">Enter Building No :</string>
    <string name="enter_building_name">Enter Building Name :</string>
    <string name="select_type">Select Type</string>
    <string name="radioBtnMale">Male</string>
    <string name="_02">02</string>
    <string name="radioBtnFemale">Female</string>
    <string name="addbuildingSaveBtn">save</string>
    <string name="removeBuildingBtn">Remove Building</string>

    <string name="floor_no">Floor No -</string>
    <string name="room_count">Room Count -</string>
    <string name="add_floor">Add Floor</string>
    <string name="remove_floor">Remove Floor</string>
    <string name="enter_floor_no">Enter Floor No :</string>
    <string name="enter_room_count">Enter Room Count :</string>
    <string name="addFloorSaveBtn">save</string>
    <string name="enter_floor_no2">Enter Floor No :</string>
    <string name="removeFloorBtn">Save</string>

    <string name="select_room_type">Room Type</string>
    <string name="select_room_status">Room Status</string>
    <string name="room_id">Room ID</string>
    <string name="available">Available</string>
    <string name="booked">Booked</string>
    <string name="ac">AC</string>
    <string name="non_ac">Non AC</string>
    <string name="students_count">Students Count</string>
    <string name="bed_count">Beds Count</string>

    <string name="roomSortBtn">Sort</string>
    <string name="room_search">Add Room</string>
    <string name="add_room">Add Room</string>
    <string name="remove_room">Remove Room</string>
    <string name="enter_room_no">Enter Room No :</string>
    <string name="addRoomBtn">Save</string>
    <string name="updateRoomBtn">Update</string>
    <string name="removeRoomBtn">Save</string>

    <string name="add_bed">Add Bed</string>
    <string name="remove_bed">Remove Bed</string>
    <string name="updateBedBtn">Update</string>
    <string name="addBedSaveBtn">Save</string>
    <string name="enter_bed_no">Enter Bed No :</string>
    <string name="removeBedBtn">Save</string>
    <string name="updateBedBtn1">Update</string>


    <string name="available_seats_percentage">Available Seat Percentage</string>
    <string name="search">Search here</string>
    <string name="logout">Logout</string>
    <string name="logout_msg">Are you sure,do you want to logout?</string>
    <string name="delete">Delete</string>
    <string name="delete_msg">Are you sure you want to delete this student</string>
    <string name="backTo_home">Back To Home</string>
    <string name="stu_room_details">Student Room Details</string>
    <string name="room_no">Room No -</string>
    <string name="bed_no">Bed No -</string>
    <string name="error">ERROR</string>
    <string name="error_msg_accommodation">This student cannot be assigned due to some error in accommodation settings please check your accommodation settings under the selected building. If not please select a new building and try again.</string>
    <string name="update_admin_details">Update Admin Details</string>
</resources>