<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="57dp"
    android:fillViewport="true">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StuRegister">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar"/>


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:columnCount="1"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/student_registration_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/edtTxtStuName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/studentName"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

<!--        Enter username field-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtTxtUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:onClick="onclickGenerateUsername"
                android:padding="8dp"
                android:src="@drawable/ic_baseline_change_circle_24"
                android:text="button" />


        </RelativeLayout>

        <EditText
            android:id="@+id/edtTxtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/student_tmp_password"
            android:inputType="textPassword"
            android:minHeight="48dp" />

<!--        gender-->
        <RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:layout_marginRight="120dp">

                <RadioGroup
                    android:id="@+id/rdoGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_centerInParent="true">
                    <RadioButton
                        android:id="@+id/rdoBtnMale"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/gender_male"
                        android:layout_weight="1"
                        android:checked="true"
                        />
                    <RadioButton
                        android:id="@+id/rdoBtnFemale"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/gender_female"
                        android:layout_weight="1"/>
                </RadioGroup>
            </LinearLayout>

        </RelativeLayout>

        <EditText
            android:id="@+id/edtTxtEmPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/student_em_phone"
            android:inputType="phone"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/edtTxtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/student_phone"
            android:inputType="phone"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/edtTxtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/student_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/edtTxtStuAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/student_address"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/btn_CreateAccount"
            android:layout_margin="5dp"
            android:padding="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note_roomAssign"
            android:textAlignment="center"
            android:padding="1dp"/>

    </GridLayout>

</RelativeLayout>
</ScrollView>