<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="57dp"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AdministratorRegistration">

        <include layout="@layout/toolbar"
            android:id="@+id/toolbar"/>


        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:columnCount="1"
            >
            <TextView
                android:id="@+id/txtWelcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="20dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:padding="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reg_as_admin"
                    android:textSize="15dp"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:padding="5dp"/>

            <EditText
                android:id="@+id/edtTxtOrgName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:hint="@string/orgUsername"
                android:inputType="textPersonName"
                android:minHeight="48dp" />
            <EditText
                android:id="@+id/edtTxtOrgPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:hint="@string/orgPassword"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:enabled="false"/>
            <EditText
                android:id="@+id/edtTxtAdminName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:hint="@string/adminName"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:enabled="false"/>

            <!--        Enter username field-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edtTxtUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:enabled="false"/>

                <ImageButton
                    android:id="@+id/imgBtnusNameGen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="0dp"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:src="@drawable/ic_baseline_change_circle_24"
                    android:clickable="false"/>


            </RelativeLayout>

            <EditText
                android:id="@+id/edtTxtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:hint="@string/student_tmp_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:enabled="false"/>

            <EditText
                android:id="@+id/edtTxtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:hint="@string/admin_contactNo"
                android:inputType="phone"
                android:minHeight="48dp"
                android:enabled="false"/>
            <EditText
                android:id="@+id/edtTxtNIC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:hint="@string/admin_NIC"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:enabled="false"/>

            <EditText
                android:id="@+id/edtTxtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:hint="@string/admin_email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:enabled="false"/>

            <EditText
                android:id="@+id/edtTxtAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:hint="@string/admin_address"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:enabled="false"/>

            <Button
                android:id="@+id/btnCrtAcc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue"
                android:text="@string/btn_CreateAccount"
                android:layout_margin="5dp"
                android:layout_marginTop="30dp"
                android:padding="15dp"
                android:enabled="false"/>

        </GridLayout>

    </RelativeLayout>
</ScrollView>