<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="57dp"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".OrganizationRegistration">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:columnCount="1"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="25dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:padding="5dp"/>

            <ImageView
                android:id="@+id/imgBackground"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/student_home_background"/>

            <!--        Enter username field-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="0dp">

                <EditText
                    android:id="@+id/edtTxtUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:minHeight="48dp" />


            </RelativeLayout>

            <EditText
                android:id="@+id/edtTxtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:hint="@string/student_tmp_password"
                android:inputType="textPassword"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue"
                android:text="@string/logIn"
                android:textSize="16dp"
                android:layout_margin="5dp"
                android:layout_marginTop="5dp"
                android:padding="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/dont_have_an_account"
                android:gravity="center"/>

            <TextView
                android:id="@+id/reg_as_org"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:layout_marginTop="10dp"
                android:text="@string/reg_as_organization"
                android:textColor="@color/blue"
                android:gravity="center"/>
            <TextView
                android:id="@+id/reg_as_admin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:layout_marginTop="12dp"
                android:text="@string/reg_as_admin"
                android:textColor="@color/blue"
                android:gravity="center"
                />

        </GridLayout>

    </RelativeLayout>
</ScrollView>