<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBuilding">

    <!--    import tool bar-->
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="-206dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="203dp"
            android:layout_height="41dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/enter_building_no"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/B_add_no"
            android:layout_width="170dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="number"
            android:text="1"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="LabelFor,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="237dp"
            android:layout_height="43dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="80dp"
            android:text="@string/enter_building_name"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/B_add_name"
            android:layout_width="137dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="text"
            android:text="B"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/B_add_no"
            tools:ignore="LabelFor,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="168dp"
            android:layout_height="37dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/select_type"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <RadioGroup
            android:id="@+id/B_add_radio"
            android:layout_width="143dp"
            android:layout_height="115dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.165"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

            <RadioButton
                android:id="@+id/radioBtnMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioBtnMale"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radioBtnFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioBtnFemale"
                android:textSize="20sp" />
        </RadioGroup>

        <Button
            android:id="@+id/B_save_btn"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/blue"
            android:text="@string/addbuildingSaveBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>